--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <div id="root" style="  position: fixed;top: 25%; left: 45%; margin-top: -50px; margin-left: -100px"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
